<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTransalation" tools:locale="languageCode">
    <string name="app_name">Fundu</string>
    <string name="google_map_key_for_server" translatable="false">your_key</string>
    <string name="string_help">Help</string>
    <string name="action_notification">Notification</string>
    <string name="send_money_header_text">Send Money</string>
    <string-array name="days">
        <item>Tomorrow</item>
        <item>Today</item>
        <item>Sunday</item>
        <item>Saturday</item>
    </string-array>
    <string name="title_activity_terms_and_condition">Terms &amp; Conditions</string>
    <string name="title_activity_popups">PopupsActivity</string>
    <string-array name="block_type">
        <item>Don\'t Report</item>
        <item>Lorem Ipsum</item>
        <item>Dolor Sit Amet</item>
        <item>Consectetur Adipiscing Elit</item>
        <item>Integer Mattis Odio</item>
    </string-array>
    <string name="title_transaction_type">title_transaction_type</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="sample_data">Sample Data</string>
    <string name="close">Close</string>
    <string name="user_image">User Image</string>
    <string name="gps_activate_button"><![CDATA[ACTIVATE & AUTHORIZE GPS]]></string>
    <string name="gps_popup_title">ONE MORE THING</string>
    <string name="gps_popup_subtitle">Fundu requires GPS to work and give you the\nbest experience.</string>
    <string name="string_ok">OK</string>
    <string name="load_money_enter_amount_title">ENTER A CUSTOM AMOUNT</string>
    <string name="send_money">SEND MONEY</string>
    <string name="request_money">REQUEST MONEY</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue     cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian     bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber     cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese     the big cheese.</string>
    <string name="cd_logo">Logo</string>
    <string name="toolbar_search">Search</string>
    <string name="appwidget_text">Fundu</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="sample_text_one">Picksum Ipsum is a badass text generator that will give you the best lines from some of the biggest Hollywood legends, including Clint Eastwood, Michael Caine, Jim Carrey and Morgan Freeman: Excuse me, I\'d like to ASS you a few questions. Hey, maybe I will give you a call sometime. Your number still 911? Look at that, it\'s exactly three seconds before I honk your nose and pull your underwear over your head. We got no food we got no money and our pets heads are falling off! Haaaaaaarry.</string>
    <string name="sample_text_two">Beer Ipsum is perfect if you\'re searching for something a little more refreshing, and it\'s the ideal destination for delicious, malty ipsum text: Secondary fermentation degrees plato units of bitterness, cask conditioned ale ibu real ale pint glass craft beer. krausen goblet grainy ibu brewhouse lagering finishing hops. Trappist, black malt chocolate malt balthazar gravity dextrin saccharification trappist final gravity. Aau scotch ale, adjunct. hops bung infusion, cask conditioning pitching malt extract.</string>
    <string name="sample_text_title_one">Picksum Ipsum</string>
    <string name="sample_text_title_two">Beer Ipsum</string>
    <string name="splash_eko_text_1">a product of</string>
    <string name="splash_eko_text_2">Eko India Financial Services Pvt Ltd</string>
    <string name="activity_link_account_hint_number" translatable="false">Number</string>
    <string name="activity_link_account_add_more" translatable="false">+ ADD MORE</string>
    <string name="activity_link_account_hint_acc_number" translatable="false">Account Number</string>
    <string name="activity_link_account_ifsc_code" translatable="false">IFSC</string>
    <string name="activity_link_account_hint_email" translatable="false">Email</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_need_cash" translatable="false">Need Cash</string>
    <string name="title_select_amount" translatable="false">Enter amount</string>
    <string name="title_convenience_pay" translatable="false">What convenience fee would you want to pay for this transaction?</string>
    <string name="info_need_cash" translatable="false"><![CDATA[Selecting the 0% option will exclude Eko merchants & agents from the search.]]></string>
    <string name="button_submit" translatable="false">Submit</string>
    <string name="button_cancel" translatable="false">Cancel</string>
    <string name="dialog_title_cancel_transaction" translatable="false">Cancel Transaction?</string>
    <string name="dialog_button_close_window" translatable="false">Close window</string>
    <string name="dialog_button_cancel_transaction" translatable="false">Cancel transaction</string>
    <string name="text_sent" translatable="false">Sent</string>
    <string name="text_personal" translatable="false">Personal</string>
    <string name="text_mobile" translatable="false">Mobile</string>
    <string name="text_terms" translatable="false"><![CDATA[Terms & Conditions]]></string>
    <string name="title_social_profiles" translatable="false">Social Profiles</string>
    <string name="button_connected" translatable="false">Connected</string>
    <string name="button_connect" translatable="false">Connect</string>
    <string name="title_yesterday" translatable="false">Yesterday</string>
    <string name="text_app" translatable="false">App</string>
    <string name="text_push_notification" translatable="false">Push Notification</string>
    <string name="text_share_location" translatable="false">Share Location</string>
    <string name="text_request" translatable="false">Available for Users Requests</string>
    <string name="text_disable_request" translatable="false">Disable request until</string>
    <string name="text_blocked_users" translatable="false">Blocked Users</string>
    <string name="text_sign_out" translatable="false">Sign Out</string>
    <string name="rate_us">Rate Us</string>
    <string name="text_change_accno" translatable="false">Change Account Number</string>
    <string name="text_change_acc">Change Account</string>
    <string name="cancel_transaction" translatable="false">CANCEL TRANSACTION</string>
    <string name="what_happened" translatable="false">What Happened?</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="have_been_sent_from_your_wallet_1" translatable="false">Have been sent from your wallet.</string>
    <string name="have_been_sent_to_your_wallet" translatable="false">Have been sent to your wallet.</string>
    <string name="have_been_sent_from_your_wallet_2" translatable="false">Have been sent to your wallet.</string>
    <string name="tap_to_rate" translatable="false">Tap to Rate</string>
    <string name="welcome" translatable="false">WELCOME</string>
    <string name="thanks" translatable="false">THANKS!</string>
    <string name="next" translatable="false">Next</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="please_enter_your_mobile_number" translatable="false">We will send a one time password via SMS to verify your phone number</string>
    <string name="please_reset_fundu_pin_desp" translatable="false">Your Fundu PIN is used to secure your transaction. Please choose the new PIN below.</string>
    <string name="please_change_fundu_pin_desp" translatable="false">Your Fundu PIN is used to secure your transaction. Please enter your current PIN and new PIN twice to confirm the change.</string>
    <string name="update_days_and_time_desp" translatable="false">Update your shop opening and closing time with days open in a week.</string>
    <string name="desp_update_account_no" translatable="false">Your Account Number is incorrect. Kindly enter correct Account Number </string>
    <string name="ruppee_symbol" translatable="false">\u20B9</string>
    <string name="text_check_balance" translatable="false">Please wait, getting started…</string>
    <string name="file_provider_authority" translatable="false">in.co.eko.fundu</string>
    <string name="country_code" translatable="false">+91</string>
    <string name="country_code_ken" translatable="false">+254</string>
    <string name="double_zero" translatable="false">00</string>
    <string-array name="nav_drawer_array_ind" translatable="false">
        
        
        <item>Invite Friends</item>
        <item>Scan and Get Cash</item>
        <item>Find ATM/Cash Point</item>
        
        <item>History</item>
        <item>Manage Account</item>
        <item>Settings</item>
        <item>Support</item>

    </string-array>
    <string-array name="nav_drawer_array_default" translatable="false">
        
        <item>Settings</item>
        <item>Support</item>

    </string-array>
    <string-array name="nav_drawer_array_ken" translatable="false">
        
        <item>Get Cash from Friends</item>
        
        <item>History</item>
        <item>Settings</item>
        <item>Support</item>
    </string-array>
    <string-array name="helpList" translatable="false">
        <item>I did not receive cash</item>
        <item>I do not feel safe</item>
        <item>Other</item>

    </string-array>
    <string name="send_money_to" translatable="false">Send Money to</string>
    <string name="send_money_to_bank_txt" translatable="false">Send Money to Axis*****272</string>
    <string name="correct_amount_validation" translatable="false">Please enter correct amount</string>
    <string name="balance_amount" translatable="false">Balance Amount</string>
    <string name="error" translatable="false">Error</string>
    <string name="insufficient_amount" translatable="false">Insufficient Amount. Please load your wallet first.</string>
    <string name="wallet" translatable="false">WALLET</string>
    <string name="select_cancel_reasons" translatable="false">Select a reason for cancellation:</string>
    <string name="cancel_reason_1">The provider is too far</string>
    <string name="cancel_reason_2">Provider does not have exact cash</string>
    <string name="cancel_reason_3">Unable to contact provider</string>
    <string name="cancel_reason_4">I changed my mind</string>
    <string name="cancel_reason_5">Provider unavailable</string>
    <string name="cancel_reason_6">My reason is not listed</string>
    <string name="dont_cancel">DON\'T CANCEL</string>
    <string name="database">Database</string>
    <string name="number_verified">Your number has been verified.</string>
    <string name="signup_as_merchant">Sign up as a Merchant/Agent</string>
    <string name="name_of_shop">Name of Shop/Business</string>
    <string name="enter_business_name">Enter Business Name</string>
    <string name="business_no">Incorporation/Business Number</string>
    <string name="enter_business_no">Enter Business Number</string>
    <string name="contact_name">Contact Person Name</string>
    <string name="enter_person_name">Enter Person Name</string>
    <string name="contact_person_phone">Contact Person Phone Number</string>
    <string name="enter_person_no">Enter Person Number</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="business_type">Type of Business</string>
    <string name="select_business_type">Select Business Type</string>
    <string name="vertical_market">Vertical Market</string>
    <string name="select_vertical_market">Select Vertical Market</string>
    <string name="verify_string">verify</string>
</resources>