<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.co.eko.fundu.activities.HomeActivity">
    <item android:id="@+id/action_notification"
        android:title="@string/action_notification"
        android:visible="false"
        android:icon="@drawable/ic_action_notification"
        android:orderInCategory="101" app:showAsAction="always" />
    <item android:id="@+id/action_database"
        android:title="@string/database"
        android:visible="false"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_search"
        android:title="@string/toolbar_search"
        android:visible="false"
        android:icon="@drawable/ic_toolbar_search"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
</menu>
