<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_as_merchant"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="2"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <in.co.eko.fundu.views.CircleImageView
                        android:id="@+id/merchant_pic"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_user_image" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_shop" />

                <EditText
                    android:id="@+id/bussinessName"
                    android:layout_width="match_parent"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:ems="40"
                    android:maxLength="40"
                    android:textColorHint="@color/bottom_border"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_business_name" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_no" />

                <EditText
                    android:id="@+id/incorporateNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:ems="15"
                    android:textColorHint="@color/bottom_border"
                    android:hint="@string/enter_business_no" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_name" />

                <EditText
                    android:id="@+id/personName"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:ems="20"
                    android:maxLength="20"
                    android:textColorHint="@color/bottom_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_person_name" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_person_phone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/countrycode"
                        android:layout_width="wrap_content"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/bottom_border"
                        android:hint="+254 " />

                    <EditText
                        android:id="@+id/personNumber"
                        android:maxLength="9"
                        android:inputType="phone"
                        android:digits="0123456789"
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/bottom_border"
                        android:hint="@string/enter_person_no" />
                </LinearLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/address"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/bottom_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_address" />

                <!--<TextView android:layout_marginTop="10dp"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Shop Location"/>-->

                <!--<RelativeLayout android:id="@+id/relative_gotomap"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->
                <!--<EditText android:id="@+id/shoplocation"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:imeOptions="actionNext"-->
                <!--android:maxLength="15"-->
                <!--android:maxLines="1"-->
                <!--android:ems="15"-->
                <!--android:clickable="false"-->
                <!--android:focusable="false"-->
                <!--android:focusableInTouchMode="false"-->
                <!--android:textColorHint="@color/bottom_border"-->
                <!--android:hint="Select Shop Location"/>-->

                <!--<ImageView-->
                <!--android:layout_width="30dp"-->
                <!--android:layout_height="30dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:src="@drawable/locs"/>-->
                <!--</RelativeLayout>-->

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_type" />

                <Spinner
                    android:id="@+id/bussinessType"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_business_type" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"></View>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical_market" />

                <Spinner
                    android:id="@+id/verticalMarket"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_vertical_market" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"></View>
            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_height="wrap_content">-->

            <!--<Switch-->
            <!--android:id="@+id/allow_withdraw"-->
            <!--android:hint="Allow Withdraw"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <Button
                android:id="@+id/verifyButton"
                android:layout_width="130dp"
                android:layout_height="38dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/green_button_selector"
                android:text="@string/verify_string"
                style="@style/ButtonStyle"
                android:layout_alignParentBottom="true"
                android:enabled="true"
                android:filterTouchesWhenObscured="true" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>