<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/White"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20">

    <in.co.eko.fundu.views.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:fontname="Muli-SemiBold.ttf"
        android:id="@+id/title"
        android:textSize="@dimen/sp17"
        android:textColor="@color/brownish_grey"
        android:text="@string/select_cancel_reasons"
        />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:id="@+id/cancel_reasons"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton1"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/sp15"
                android:text="@string/cancel_reason_1"
                />
            <RadioButton
                android:layout_marginTop="@dimen/dp8"
                android:id="@+id/radioButton2"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/sp15"
                android:text="@string/cancel_reason_2"
                />
            <RadioButton
                android:layout_marginTop="@dimen/dp8"
                android:id="@+id/radioButton3"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/sp15"
                android:text="@string/cancel_reason_3"
                />
            <RadioButton
                android:layout_marginTop="@dimen/dp8"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/sp15"
                android:id="@+id/radioButton4"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_reason_4"
                />
            <RadioButton
                android:layout_marginTop="@dimen/dp8"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/sp15"
                android:id="@+id/radioButton5"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_reason_5"
                />
            <RadioButton
                android:layout_marginTop="@dimen/dp8"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/sp15"
                android:id="@+id/radioButton6"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_reason_6"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/cancel_reasons"
            android:background="@color/white_three"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/cancel_reasons"
            android:layout_marginTop="@dimen/dp10"
            android:weightSum="2"
            android:layout_height="@dimen/dp60">

            <in.co.eko.fundu.views.customviews.CustomTextView
                android:id="@+id/cancel"
                android:textColor="@drawable/selector_green_black"
                app:fontname="Muli-SemiBold.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textSize="@dimen/sp16"
                android:text="@string/dont_cancel"
                android:enabled="true"
                />



            <TextView
                android:layout_width="1dp"
                android:layout_height="@dimen/dp60"
                android:background="@color/white_three"/>

            <in.co.eko.fundu.views.customviews.CustomTextView
                app:fontname="Muli-SemiBold.ttf"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@drawable/selector_green_black"
                android:textAllCaps="true"
                android:textSize="@dimen/sp16"
                android:id="@+id/submit"
                android:gravity="center"
                android:enabled="false"
                android:text="@string/submit"
                />



        </LinearLayout>
    </RelativeLayout>
</ScrollView>