<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.co.eko.fundu.fragments.IdentificationFragment">

    <in.co.eko.fundu.views.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"
        android:textColor="@color/topaz_two"
        android:textSize="@dimen/sp22"
        android:textStyle="bold"
        app:fontname="Muli-Regular.ttf" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/verifyImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/verify_image_drawable" />

        <in.co.eko.fundu.views.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/thanks"
            android:textColor="@color/brownish_grey"
            android:textSize="@dimen/sp16"
            app:fontname="Muli-Regular.ttf" />

        <in.co.eko.fundu.views.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/number_verified"
            android:textColor="@color/brownish_grey"
            android:textSize="@dimen/sp16"
            app:fontname="Muli-Regular.ttf" />
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        style="@style/ButtonStyle"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="120dp"
        android:background="@drawable/green_button_selector"
        android:filterTouchesWhenObscured="true"
        android:text="@string/next" />



</FrameLayout>
