<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shadow_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">


    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_title_cancel_transaction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:text="Nunc egestas, ligula non posuere rhoncus, odio diam condimentum elit, sed egestas risus dolor eu erat."
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/dialog_button_close_window"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:filterTouchesWhenObscured="true"/>

        <Button
            android:id="@+id/button5"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="38dp"

            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/dialog_button_cancel_transaction"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:filterTouchesWhenObscured="true"/>
    </LinearLayout>
</LinearLayout>
